# utils4work

./: .flake8  .gitignore  pyproject.toml
output/md_from_pdf/: gme.md
utils4work/pdf2md/: concise.py
